new links added

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,10 @@
 <html lang="en-us">
 
     <head>
-        <meta charset="utf-8" />
-        <title>Basic-Portfolio</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Responsive-Portfolio</title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     </head>
@@ -39,23 +41,23 @@
 
                 <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/hangman.png" alt="Hangman">
-                    <div class="itemTitle">Hangman</div>
+                    <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/Word-Guess-Game/index.html" target="_blank">Hangman</a></div>
                 </div>
                 <div class="portfolioItems">
-                    <img class="itemPic" src="assets/images/RPGgame.png" alt="RPG Game">
-                    <div class="itemTitle">RPG Game</div>
+                    <img class="itemPic" src="assets/images/giftastic.gif" alt="GifTastic">
+                    <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/GifTastic/index.html" target="_blank">GifTastic!</a></div>
                 </div>
                 <div class="portfolioItems">
                         <img class="itemPic" src="assets/images/Trivia.PNG" alt="Trivia Game">
-                    <div class="itemTitle">Trivia Game</div>
+                    <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/TriviaGame/index.html" target="_blank">Trivia Game</a></div>
                 </div>
                 <div class="portfolioItems">
-                    <img class="itemPic" src="assets/images/widget.PNG" alt="Widget">
-                    <div class="itemTitle">Rutgers Info Widget</div>
+                    <img class="itemPic" src="assets/images/train_schedule.jpg" alt="Train Schedule">
+                    <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/trainSchedule/index.html" target="_blank">Train Schedule</a></div>
                 </div>
                 <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/rock.PNG" alt="Rock Paper Scissor">
-                    <div class="itemTitle">Rock, Paper, Scissor</div>                    
+                    <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/RPS-Game/index.html" target="_blank">Rock, Paper, Scissor</a></div>                    
                 </div>
 
             </div>
