--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Basic-Portfolio</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Responsive-Portfolio</title>
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     </head>
