--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8" />
-        <title>Basic-Portfolio</title>
+        <title>Responsive-Portfolio</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- added for Responsive Web Development (RWD) -->
         <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
         <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
