Other link added

--- a/portfolio.html
+++ b/portfolio.html
@@ -59,6 +59,10 @@
                     <img class="itemPic" src="assets/images/rock.PNG" alt="Rock Paper Scissor">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/RPS-Game/index.html" target="_blank">Rock, Paper, Scissor</a></div>                    
                 </div>
+                <div class="portfolioItems">
+                    <img class="itemPic" src="assets/images/crystals_shot.png" alt="Crystal collector">
+                    <div class="itemTitle"><a href="https://joedmg58.github.io/Crystal-Collector/index.html" target="_blank">Crystal Collector</a></div>
+                </div>
 
             </div>
 
