--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
                 </div>
                 <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/crystals_shot.png" alt="Crystal collector">
-                    <div class="itemTitle"><a href="https://joedmg58.github.io/Crystal-Collector/index.html" target="_blank">Crystal Collector</a></div>
+                    <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/Crystal-Collector/index.html" target="_blank">Crystal Collector</a></div>
                 </div>
 
             </div>
