--- a/index.html
+++ b/index.html
@@ -37,18 +37,15 @@
             <hr>
 
             <img class="myPic" src="assets/images/mypic.PNG" alt="Picture of Joed Machado" height="200" width="200"/>
+            
+            <p>Web Developer with 20 years experience as a Telecommunication Engineer who specialized in coding, electronics, and electricity.<p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, maiores qui. Praesentium laboriosam 
-            nulla facilis iure eius minus animi autem commodi, quibusdam, labore vitae ducimus dignissimos quam et reprehenderit 
-            veritatis?</p>
-            <br>    
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis pariatur placeat, consectetur debitis impedit, 
-            soluta cupiditate sit, deserunt sint maxime tempora cum animi incidunt? Asperiores maxime dolorum saepe aspernatur 
-            eos!</p>
-            <br>    
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere esse, assumenda repudiandae vel sequi velit 
-            dolorem, enim repellat molestias eos consequuntur pariatur maxime, fugit est doloribus quo. Consequuntur, incidunt 
-            voluptates.</p>
+            <p>I’ve love’d technology from always. I’m excited about new emerging technologies like Internet Of Things (IoT), Home Automation, Artificial Intelligence (AI) and Web Services (WS) and how they integrate.<p>
+
+            <p>I have experience with web development tech like HTML, CSS and Javascript, as well as high level desktop programming language such as Delphi and Object Pascal. Also great knowledge of microprocessors and microcontrollers and low level programming. 
+                Recently studied on University of Miami Coding Boot Camp (2018). <p>
+
+            
 
         </div>
 
