--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,11 @@
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/Crystal-Collector/index.html" target="_blank">Crystal Collector</a></div>
                 </div>
 
+                <div class="portfolioItems">
+                    <img class="itemPic" src="" alt="">
+                    <div class="itemTitle"><a class="itemLink" href="" target="_blank" ></a></div>
+                </div>
+
             </div>
 
         </div>
@@ -71,6 +76,8 @@
         <footer>
             Copyright &copy;
         </footer>
+
+        <script src="./assets/JS/main.js"></script>
 
     </body>
 
