New portfolio items added, new script added

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,35 +39,40 @@
 
             <div class="portfolioContent">
 
-                <div class="portfolioItems">
+                <!-- <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/hangman.png" alt="Hangman">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/Word-Guess-Game/index.html" target="_blank">Hangman</a></div>
-                </div>
-                <div class="portfolioItems">
+                </div> -->
+
+                <!-- <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/giftastic.gif" alt="GifTastic">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/GifTastic/index.html" target="_blank">GifTastic!</a></div>
-                </div>
-                <div class="portfolioItems">
+                </div> -->
+
+                <!-- <div class="portfolioItems">
                         <img class="itemPic" src="assets/images/Trivia.PNG" alt="Trivia Game">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/TriviaGame/index.html" target="_blank">Trivia Game</a></div>
-                </div>
-                <div class="portfolioItems">
+                </div> -->
+
+                <!-- <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/train_schedule.jpg" alt="Train Schedule">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/trainSchedule/index.html" target="_blank">Train Schedule</a></div>
-                </div>
-                <div class="portfolioItems">
+                </div> -->
+
+                <!-- <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/rock.PNG" alt="Rock Paper Scissor">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/RPS-Game/index.html" target="_blank">Rock, Paper, Scissor</a></div>                    
-                </div>
-                <div class="portfolioItems">
+                </div> -->
+
+               <!--  <div class="portfolioItems">
                     <img class="itemPic" src="assets/images/crystals_shot.png" alt="Crystal collector">
                     <div class="itemTitle"><a class="itemLink" href="https://joedmg58.github.io/Crystal-Collector/index.html" target="_blank">Crystal Collector</a></div>
-                </div>
+                </div> -->
 
-                <div class="portfolioItems">
+                <!-- <div class="portfolioItems">
                     <img class="itemPic" src="" alt="">
                     <div class="itemTitle"><a class="itemLink" href="" target="_blank" ></a></div>
-                </div>
+                </div> -->
 
             </div>
 
